--- a/src/Screens/Register/register_styles.css
+++ b/src/Screens/Register/register_styles.css
@@ -1,17 +1,21 @@
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap");
 html {
     background-image: linear-gradient(to right, #94b0da, #dcedff);
     margin: 150px auto 0 auto;
 }
 .registerFormContainer{
-    font-family:'Roboto', serif;
     display: inline-block;
     background-color: #FAF9F6;
     height: 600px;
     width: 600px;
     border-radius: 25% 10%;
     text-align: center;
-    opacity: 0.6;
+    opacity: 0.8;
+    box-shadow: 10px 10px;
+}
+
+.formGroup1{
+    margin-top: 5%;
 }
 
 .companyInfoContainer{
@@ -21,9 +25,14 @@ html {
 
 .companyInfoText{
     margin-top: -100px;
+    font-weight: 500;
 }
 .companyInfoSingleText{
     margin-bottom: 13px !important;
+}
+.brainText{
+    color: #233dff;
+    font-weight: 700;
 }
 .formInput{
     width: 80%;
@@ -32,15 +41,17 @@ html {
 }
 .registerButton{
     border: none !important;
-    color: #dcedff !important;
+    color: white !important;
+    font-weight: bolder !important;
+    font-size: 15px !important;
     padding: 10px 20px !important;
     text-align: center !important;
     text-decoration: none !important;
     display: inline-block !important;
-    margin: 10% 2px 0 63% !important;
+    margin: 5% 2px 8px 0 !important;
     cursor: pointer !important;
     border-radius: 16px !important;
-    background-color: #91b0da !important;
+    background-color: #233dff !important;
 }
 
 .aboutUsButton{
