--- a/src/Screens/Register/register_styles.css
+++ b/src/Screens/Register/register_styles.css
@@ -1,8 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap");
 html {
     background-image: linear-gradient(to right, #94b0da, #dcedff);
-    margin: 150px auto 0 auto;
+    margin: 0 auto 0 auto;
 }
+
+.entireGrid{
+    margin-top: 6% !important;
+}
+
 .registerFormContainer{
     display: inline-block;
     background-color: #FAF9F6;
@@ -10,7 +15,7 @@ html {
     width: 600px;
     border-radius: 25% 10%;
     text-align: center;
-    opacity: 0.8;
+    opacity: 1.0;
     box-shadow: 10px 10px;
 }
 
