Finish registerAPI file and set up error handling on register.js

--- a/src/Components/Footer/footer_style.css
+++ b/src/Components/Footer/footer_style.css
@@ -1,4 +1,5 @@
 .footer{
-    position: absolute ;
-    width: 100% !important;
+    position: fixed;
+    bottom: -4px !important;
+    width: 100%;
 }
